@@ -12,6 +12,8 @@ version 3.0.0 (??/??/????):
 	* Show local time for incoming messages. (Tomasz Wasilczyk) (#4579)
 	* Detailed descriptions on connection failures. (Tomasz Wasilczyk)
 	  (#14648)
+	* Fixed password change dialog and problems with connecting to accounts
+	  with non-ASCII passwords. (Tomasz Wasilczyk) (#14652)
 
 	MXit:
 	* Remove all reference to Hidden Number.
